[metadata]
name = thataway
version = 0.1.0
description = Route to different default applications by pattern.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
author = Jason C. McDonald
author_email = codemouse92@outlook.com
url = https://github.com/codemouse92/thataway
project_urls =
    Bug Reports = https://github.com/codemouse92/thataway/issues
    Funding = https://github.com/sponsors/CodeMouse92
    Source = https://github.com/codemouse92/thataway
keywords = utility

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    appdirs
    click
python_version = >=3.6, <4

[options.packages.find]
where = src
exclude = tests

[options.extras_require]
test =
    pytest
    tox

[options.entry_points]
console_scripts =
    thataway = thataway.__main__:cli

[flake8]
max-line-length = 120
